--- a/src/style.css
+++ b/src/style.css
@@ -9,27 +9,39 @@
 }
 
 .cabecalho{
-    justify-content: space-between;
     align-items: center;
-    padding: 20px 50px;
-    background-color: #000;
+    padding: 20px 0;
+    justify-content: center;
+    gap: 100px;
+}
+
+
+.cabecalho .logo img{
+    width: 40%;
+    padding-top: 10px;
 }
 
 .cabecalho .menu .lista-de-navegacao li a{
     padding-bottom: 3px;
     margin-left: 30px;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 10px;
     font-weight: 500;
+    color: #000;
+    border-bottom: 2px solid #d7232300;
+    transition: all 0.1s ease-in-out;
     
 }
 
 .cabecalho .menu .lista-de-navegacao li a:hover{
     border-bottom: 2px solid #D72323;
+    color: #D72323;
 }
 
-.corpo{
+.corpo .principal{
     height: 80vh;
+    background-color: #000;
+    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
