--- a/src/style.css
+++ b/src/style.css
@@ -10,22 +10,22 @@
 
 .cabecalho{
     align-items: center;
-    padding: 20px 0;
+    padding: 10px 0;
     justify-content: center;
     gap: 100px;
 }
 
 
 .cabecalho .logo img{
-    width: 40%;
-    padding-top: 10px;
+    height: 70px;
+    padding-top: 5px;
 }
 
 .cabecalho .menu .lista-de-navegacao li a{
-    padding-bottom: 3px;
+    padding: ;
     margin-left: 30px;
-    text-transform: uppercase;
-    font-size: 10px;
+    /* text-transform: uppercase; */
+    font-size: 12px;
     font-weight: 500;
     color: #000;
     border-bottom: 2px solid #d7232300;
@@ -35,14 +35,30 @@
 
 .cabecalho .menu .lista-de-navegacao li a:hover{
     border-bottom: 2px solid #D72323;
-    color: #D72323;
 }
 
 .corpo .principal{
-    height: 80vh;
-    background-color: #000;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    max-width: 900px;
+    margin: 80px auto;
+}
+
+.corpo .principal h1{
+    max-width: 730px;
+    font-size: 42px;
+    font-weight: 700;
+    color: #6e6e73;
+    margin-bottom: 20px;
+}
+
+.corpo .principal h1 span{
+    color: #000;
+}
+
+.corpo .principal .container button a{
+    padding: 10px 20px;
+    background-color: #fff;
+    border: 1px solid #D72323;
+    border-radius: 20px;
+    font-weight: 500;
+    color: #D72323;
 }
