--- a/src/style.css
+++ b/src/style.css
@@ -10,22 +10,36 @@
 
 .cabecalho{
     padding: 10px 0;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    gap: 100px;
     border-bottom-left-radius: 20px ;
     border-bottom-right-radius: 20px ;
 }
-
 
 .cabecalho .logo img{
     height: 70px;
     padding-top: 5px;
 }
 
+.cabecalho .menu label{
+    width: 30px;
+    height: 2px;
+    background-color: #D72323;
+    display: block;
+}
+
+.cabecalho .menu label::after{
+    width: 30px;
+    height: 2px;
+    
+}
+
+.cabecalho .menu input{
+    display: none;
+}
+
 .cabecalho .menu .lista-de-navegacao li a{
     margin-left: 30px;
-    /* text-transform: uppercase; */
     font-size: 12px;
     font-weight: 500;
     color: #000;
@@ -38,16 +52,16 @@
     border-bottom: 2px solid #D72323;
 }
 
-.corpo .principal{
+.principal{
     max-width: 900px;
     margin: auto;
 }
 
-.corpo .principal .container{
+.principal .container{
     padding: 50px 0;
 }
 
-.corpo .principal h1{
+.principal h1{
     max-width: 730px;
     font-size: 42px;
     font-weight: 700;
@@ -55,11 +69,11 @@
     margin-bottom: 20px;
 }
 
-.corpo .principal h1 span{
+.principal h1 span{
     color: #D72323;
 }
 
-.corpo .principal .container button a{
+.principal .container button a{
     padding: 10px 20px;
     background-color: #fff;
     border: 2px solid #D72323;
@@ -69,14 +83,14 @@
     transition: 0.2s ease-in-out;
 }
 
-.corpo .principal .container button a:hover{
+.principal .container button a:hover{
     background-color: rgb(102, 220, 102);
     color: #fff;
     border:2px solid #fff;
     box-shadow: 0 0 5px rgb(102, 220, 102);
 }
 
-.corpo .principal img{
+.principal img{
     width: 40%;
     align-self: flex-end;
 }
@@ -93,7 +107,7 @@
 }
 
 .destaques .container ul li{
-    width: 250px;
+    width: 265px;
     align-items: center;
 }
 
@@ -104,12 +118,13 @@
     margin-right: 10px;
 }
 
-.corpo .localizacao{
+.localizacao{
     text-align: center;
     justify-content: center;
     margin: 50px 0;
 }
 
-.corpo .localizacao h2{
+.localizacao h2{
     margin-bottom: 30px;
+    text-transform: uppercase;
 }
