--- a/src/responsive.css
+++ b/src/responsive.css
@@ -29,7 +29,48 @@
         padding: 0 20px;
     }
 
+    .cabecalho .menu{
+        position: relative;
+    }
+
+    .cabecalho .menu label .menu-hamburger{
+        display: flex;
+    }
+
     .cabecalho .menu .lista-de-navegacao{
-        display: none;
+        position: absolute;
+        right: 0;
+        box-shadow: 0 2px 5px #000;
+        background-color: #fff;
+        width: 230px;
+        height: 0px;
+        overflow: hidden;
+        border-radius: 20px;
+        flex-direction: column;
+        justify-content: space-evenly;
+        text-align: center;
+        transition: 0.2s ease-in-out;
+    }
+
+    .cabecalho .menu .lista-de-navegacao li{
+        border: 1px solid #D72323;
+        border-radius: 10px;
+        width: 190px;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 7px 0 5px;
+    }
+
+    .cabecalho .menu .lista-de-navegacao li a{
+        margin: auto 0;
+        font-weight: 600;
+        font-size: 16px;
+    }
+
+    .cabecalho .menu input:checked ~ ul{
+        display: flex;
+        height: 170px;
     }
 }
