--- a/src/responsive.css
+++ b/src/responsive.css
@@ -21,28 +21,38 @@
     .destaques .container ul li p{
         font-size: 12px;
     }
+
+    .localizacao .container .mapa{
+        width: 600px;
+    }
 }
 
 @media(max-width:675px){
     .cabecalho{
-        justify-content: space-between;
+        justify-content: center;
         padding: 0 20px;
-    }
-
-    .cabecalho .menu{
         position: relative;
     }
 
-    .cabecalho .menu label .menu-hamburger{
+    .cabecalho .menu{
+        position: absolute;
+        right: 20px;
+        top: 20px;
+        height: 20px;
+        width: 20px;
+    }
+
+    .cabecalho .menu label{
         display: flex;
     }
 
     .cabecalho .menu .lista-de-navegacao{
         position: absolute;
         right: 0;
-        box-shadow: 0 2px 5px #000;
+        top: 30px;
+        box-shadow: 0 2px 5px #3E3636;
         background-color: #fff;
-        width: 230px;
+        width: 300px;
         height: 0px;
         overflow: hidden;
         border-radius: 20px;
@@ -54,23 +64,60 @@
 
     .cabecalho .menu .lista-de-navegacao li{
         border: 1px solid #D72323;
-        border-radius: 10px;
-        width: 190px;
+        border-radius: 15px;
+        width: 230px;
         margin: 0 auto;
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 7px 0 5px;
+        padding: 10px 0 8px;
+        
+    }
+
+    .cabecalho .menu .lista-de-navegacao li:hover{
+        border: 2px solid #fff;
+        box-shadow: 0 0 5px #D72323;
     }
 
     .cabecalho .menu .lista-de-navegacao li a{
         margin: auto 0;
         font-weight: 600;
-        font-size: 16px;
+        font-size: 20px;
+    }
+    
+    .cabecalho .menu .lista-de-navegacao li a:hover{
+        border-bottom: 2px solid #d7232300;
     }
 
     .cabecalho .menu input:checked ~ ul{
         display: flex;
-        height: 170px;
+        height: 250px;
     }
+
+    .destaques .container ul li{
+        width: 180px;
+    }
+
+    .localizacao .container .mapa{
+        width: 450px;
+    }
+}
+
+@media(max-width:575px){
+    .principal .container{
+        padding: 30px 0;
+    }
+    
+    .principal h1{
+        font-size: 21px;
+    }
+
+    .destaques .container ul li p{
+        font-size: 10px;
+    }
+
+    .localizacao .container .mapa{
+        width: 350px;
+    }
+
 }
