Espaçamento do cabeçalho

--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@
 
 .cabecalho{
     padding: 10px 0;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
 }
 
