--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap');
 
 *{
     font-family: "montserrat", sans-serif;
@@ -76,29 +76,68 @@
     align-self: flex-end;
 }
 
-.destaques{
+.informacoes{
     background-color: #000;
 }
 
-.destaques .container ul{
+.informacoes .container ul{
     justify-content: space-around;
     color: #fff;
     height: 100px;
     align-items: center;
 }
 
-.destaques .container ul li{
+.informacoes .container ul li{
     width: 265px;
     align-items: center;
     padding: 10px;
 }
 
-.destaques .container ul li img{
+.informacoes .container ul li img{
     filter: invert(1);
     width: 40px;
     height: 100%;
     margin-right: 10px;
 }
+
+.aparelhos{
+    margin: 50px 0 0;
+    justify-content: center;
+    align-items: center;
+}
+
+.aparelhos .container h2{
+    margin-bottom: 30px;
+    font-size: 36px;
+}
+
+.aparelhos .align{
+    text-align: center;
+}
+
+.aparelhos .iphone img{
+    width: 250px;
+    height: 170px;
+    object-fit: cover;
+}
+
+.aparelhos .relogio img{
+    width: 170px;
+}
+
+.aparelhos .ipad{
+    margin-left: 20px;
+}
+
+.aparelhos .ipad img{
+    width: 100px;
+}
+
+.aparelhos p{
+    font-weight: 600;
+    margin-top: 15px;
+}
+
 
 .localizacao{
     text-align: center;
