--- a/src/style.css
+++ b/src/style.css
@@ -77,27 +77,27 @@
     align-self: flex-end;
 }
 
-.informacoes{
-    background-color: #000;
-}
-
 .informacoes .container ul{
+    background-color: #000;
     justify-content: space-around;
     color: #fff;
-    align-items: center;
 }
 
-.informacoes .container ul li{
-    width: 265px;
-    align-items: center;
-    padding: 30px;
+.informacoes .container ul .item-lista{
+    max-width: 265px;
+    text-align: center;
+    padding: 20px;
 }
 
 .informacoes .container ul li img{
     filter: invert(1);
-    width: 40px;
-    height: 100%;
-    margin-right: 10px;
+    width: 45px;
+    margin-bottom: 10px;
+}
+
+.informacoes .container ul li p{
+    font-size: 15px;
+    font-weight: 600;
 }
 
 .aparelhos{
@@ -125,12 +125,11 @@
 
 .aparelhos img{
     height: 120px;
-    margin: 20px;
+    margin: 20px 20px 10px;
 }
 
 .aparelhos p{
     font-weight: 600;
-    margin-top: 15px;
 }
 
 .localizacao{
