--- a/src/responsive.css
+++ b/src/responsive.css
@@ -95,8 +95,8 @@
         height: 250px;
     }
 
-    .destaques .container ul li{
-        width: 180px;
+    .informacoes .container ul li p{
+        font-size: 12px;
     }
 
     .localizacao .container .mapa{
