--- a/src/style.css
+++ b/src/style.css
@@ -132,6 +132,21 @@
     font-weight: 600;
 }
 
+.rifa{
+    width: 100%;
+    justify-content: center;
+    background: rgb(255,255,255);
+    background: linear-gradient(90deg, rgba(255,255,255,1) 6.5%, rgba(0,0,0,1) 73%);
+}
+
+.rifa .container{
+    max-width: 1200px;
+}
+
+.rifa img{
+    width: 100%;
+}
+
 .localizacao{
     text-align: center;
     justify-content: center;
