--- a/src/style.css
+++ b/src/style.css
@@ -135,15 +135,14 @@
 .rifa{
     width: 100%;
     justify-content: center;
+}
+
+.rifa .container{
     background: rgb(255,255,255);
     background: linear-gradient(90deg, rgba(255,255,255,1) 6.5%, rgba(0,0,0,1) 73%);
 }
 
-.rifa .container{
-    max-width: 1200px;
-}
-
-.rifa img{
+.rifa .container picture img{
     width: 100%;
 }
 
