atualização de imagem

--- a/src/style.css
+++ b/src/style.css
@@ -79,7 +79,7 @@
 
 .informacoes .container ul{
     background-color: #000;
-    justify-content: space-around;
+    justify-content: space-evenly;
     color: #fff;
 }
 
